# xml_json_editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
.circleci/: config.yml
docker/: Dockerfile
include/controller/: FileController.h
include/model/: DomItem.h  XmlModel.h
src/controller/: FileController.cpp
src/model/: DomItem.cpp  XmlModel.cpp
ui/mainwindow/: MainMenu.qml  MainToolbar.qml  MainWindow.qml
